--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.Core/MS.Services.Auth.Core.Application/MS.Services.Auth.Core.Application.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.Core/MS.Services.Auth.Core.Application/MS.Services.Auth.Core.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\MS.Core\MS.Core.Application\MS.Core.Application.csproj" />
+  </ItemGroup>
+
 </Project>
