--- a/MS.Core/MS.Core.Application/MS.Core.Application.csproj
+++ b/MS.Core/MS.Core.Application/MS.Core.Application.csproj
@@ -1,9 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.7.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\MS.Infra\MS.Infra.Utils\MS.Infra.Utils.csproj" />
+    <ProjectReference Include="..\MS.Core.Domain\MS.Core.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
