Atualizações do nuget

--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.Core/MS.Services.Auth.Core.Application/MS.Services.Auth.Core.Application.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.Core/MS.Services.Auth.Core.Application/MS.Services.Auth.Core.Application.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\MS.Core\MS.Core.Application\MS.Core.Application.csproj" />
+    <PackageReference Include="LcsEverton.MS.Libs.Core.Application" Version="1.0.3" />
   </ItemGroup>
 
 </Project>
