--- a/MS.Libs/MS.Libs.WebApi/MS.Libs.WebApi.csproj
+++ b/MS.Libs/MS.Libs.WebApi/MS.Libs.WebApi.csproj
@@ -8,7 +8,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Title>MS.Libs.WebApi</Title>
     <PackageId>LcsEverton.MS.Libs.WebApi</PackageId>
-    <Version>1.0.1</Version>
+    <Version>1.0.4</Version>
     <Authors>Lucas Everton Santos de Oliveira</Authors>
   </PropertyGroup>
 
@@ -18,7 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MS.Libs.Infra\MS.Libs.Infra.IoC\MS.Libs.Infra.IoC.csproj" />
+    <ProjectReference Include="..\MS.Libs.Core\MS.Libs.Core.Domain\MS.Libs.Core.Domain.csproj" />
+    <ProjectReference Include="..\MS.Libs.Infra\MS.Libs.Infra.Utils\MS.Libs.Infra.Utils.csproj" />
   </ItemGroup>
 
 </Project>
