--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.Core/MS.Services.Auth.Core.Domain/MS.Services.Auth.Core.Domain.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.Core/MS.Services.Auth.Core.Domain/MS.Services.Auth.Core.Domain.csproj
@@ -7,13 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\MS.Core\MS.Core.Domain\MS.Core.Domain.csproj" />
+    <Compile Remove="Contexts\**" />
+    <EmbeddedResource Remove="Contexts\**" />
+    <None Remove="Contexts\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Contexts\Entities\" />
-    <Folder Include="Contexts\Repositorys\" />
-    <Folder Include="Contexts\UnitOfWork\" />
+    <PackageReference Include="LcsEverton.MS.Libs.Core.Domain" Version="1.0.3" />
   </ItemGroup>
 
 </Project>
