upload docker file

--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.WebAPI/MS.Services.Auth.WebAPI.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.WebAPI/MS.Services.Auth.WebAPI.csproj
@@ -5,8 +5,7 @@
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>e72bd190-3006-4f25-bfb0-bc4523b69731</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
-    <DockerfileContext>..\..</DockerfileContext>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
