--- a/MS.Libs/MS.Libs.Infra/MS.Libs.Infra.Data/MS.Libs.Infra.Data.csproj
+++ b/MS.Libs/MS.Libs.Infra/MS.Libs.Infra.Data/MS.Libs.Infra.Data.csproj
@@ -8,7 +8,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Title>MS.Libs.Infra.Data</Title>
     <PackageId>LcsEverton.MS.Libs.Infra.Data</PackageId>
-    <Version>1.0.3</Version>
+    <Version>2.0.0</Version>
     <Authors>Lucas Everton Santos de Oliveira</Authors>
   </PropertyGroup>
 
@@ -27,6 +27,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\MS.Libs.Core\MS.Libs.Core.Domain\MS.Libs.Core.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Context\UnitOfWork\" />
   </ItemGroup>
 
 </Project>
