--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.Infra/MS.Services.Auth.Infra.Data/MS.Services.Auth.Infra.Data.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.Infra/MS.Services.Auth.Infra.Data/MS.Services.Auth.Infra.Data.csproj
@@ -10,4 +10,25 @@
     <PackageReference Include="LcsEverton.MS.Libs.Infra.Data" Version="1.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Contexts\Repositorys\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
+      <PrivateAssets>none</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\MS.Services.Auth.Core\MS.Services.Auth.Core.Domain\MS.Services.Auth.Core.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
