--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.WebAPI/MS.Services.Auth.WebAPI.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.WebAPI/MS.Services.Auth.WebAPI.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>e72bd190-3006-4f25-bfb0-bc4523b69731</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+    <DockerComposeProjectPath>..\MS.Services.Auth.Docker\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MS.Services.Auth.Core\MS.Services.Auth.Core.Domain\MS.Services.Auth.Core.Domain.csproj" />
+    <ProjectReference Include="..\MS.Services.Auth.Infra\MS.Services.Auth.Infra.IoC\MS.Services.Auth.Infra.IoC.csproj" />
   </ItemGroup>
 
 </Project>
