--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.Core/MS.Services.Auth.Core.Domain/MS.Services.Auth.Core.Domain.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.Core/MS.Services.Auth.Core.Domain/MS.Services.Auth.Core.Domain.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <Folder Include="DbContexts\Repositorys\" />
+    <Folder Include="IMapper\" />
   </ItemGroup>
 
 </Project>
