--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.Core/MS.Services.Auth.Core.Application/MS.Services.Auth.Core.Application.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.Core/MS.Services.Auth.Core.Application/MS.Services.Auth.Core.Application.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LcsEverton.MS.Libs.Core.Application" Version="3.1.0" />
+    <PackageReference Include="LcsEverton.MS.Libs.Core.Application" Version="3.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MS.Services.Auth.Core.Domain\MS.Services.Auth.Core.Domain.csproj" />
   </ItemGroup>
 
 </Project>
