--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.WebAPI/MS.Services.Auth.WebAPI.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.WebAPI/MS.Services.Auth.WebAPI.csproj
@@ -9,8 +9,13 @@
     <DockerComposeProjectPath>..\MS.Services.Auth.Docker\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="LcsEverton.MS.Libs.WebApi" Version="3.5.0" />
+    <PackageReference Include="LcsEverton.MS.Libs.WebApi" Version="4.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
