--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.Core/MS.Services.Auth.Core.Domain/MS.Services.Auth.Core.Domain.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.Core/MS.Services.Auth.Core.Domain/MS.Services.Auth.Core.Domain.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="LcsEverton.MS.Libs.Core.Domain" Version="5.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
 
 </Project>
