Incluir api produtos

--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.Infra/MS.Services.Auth.Infra.Plugins/MS.Services.Auth.Infra.Plugins.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.Infra/MS.Services.Auth.Infra.Plugins/MS.Services.Auth.Infra.Plugins.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MS.Services.Auth.Core\MS.Services.Auth.Core.Domain\MS.Services.Auth.Core.Domain.csproj" />
+    <ProjectReference Include="..\..\MS.Services.Auth.Core\MS.Services.Auth.Core.Domain\MS.Services.Auth.Core.Domain.csproj" />
   </ItemGroup>
-  
+
 </Project>
