--- a/MS.Services/MS.Services.Products/MS.Services.Products.Docker/docker-compose.override.yml
+++ b/MS.Services/MS.Services.Products/MS.Services.Products.Docker/docker-compose.override.yml
@@ -1,13 +1,14 @@
 version: '3.4'
 
 services:
-  MS.Services.Products.webapi:
-    container_name : msservicesauthwebapi
+  ms.services.products.webapi:
+    container_name : msservicesproductswebapi
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "DatabaseSettings:ConnectionString=Server=sqlserver;Database=AuthDb;User Id=sa;Password=Numsey#2021"
+      - "DatabaseSettings:ConnectionString=Server=sqlserver;Database=ProductDb;User Id=sa;Password=Numsey#2021"
     ports:
-      - "4000:80"
+      - "4100:80"
     networks:
       - sql_server_network
       - backend
+      
