--- a/MS.Libs/MS.Libs.Core/MS.Libs.Core.Domain/MS.Libs.Core.Domain.csproj
+++ b/MS.Libs/MS.Libs.Core/MS.Libs.Core.Domain/MS.Libs.Core.Domain.csproj
@@ -12,4 +12,8 @@
     <Authors>Lucas Everton Santos de Oliveira</Authors>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
