--- a/MS.Services/MS.Services.Auth/docker-compose.yml
+++ b/MS.Services/MS.Services.Auth/docker-compose.yml
@@ -6,6 +6,7 @@ networks:
 
 services:
   sqlserver:
+    restart: always
     image : mcr.microsoft.com/mssql/server:2022-latest
     container_name : sqlserver
     hostname: 'sqlserver'
@@ -13,21 +14,23 @@ services:
       ACCEPT_EULA: 'Y'
       SA_PASSWORD: "Numsey#2021"
     volumes:
-      - c:\dados\volumes\mssql:/var/opt/mssql3
+      - c:\dados\volumes\mssql:/var/opt/mssql/data
     ports:
-      - '11433:1433'
+      - 11433:1433
     networks:
       - sql_server_network
+    expose:
+      - 1433
 
   ms.services.auth.webapi:
     image: msservicesauthwebapi
-    container_name : msservicesauthwebapi
+    container_name: msservicesauthwebapi
     build:
-      context: .
+      context: ./MS.Services/MS.Services.Auth/
       dockerfile: ./MS.Services.Auth.WebAPI/Dockerfile
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - "DatabaseSettings:SqlConnection=Server=sqlserver;Database=AuthDb;User Id=sa;Password=Numsey#2021"
+      - "ConnectionStrings:SqlConnection=Server=sqlserver;Database=AuthDb;User Id=sa;Password=Numsey#2021;TrustServerCertificate=True;"
     depends_on:
       - sqlserver
     ports:
