--- a/MS.Libs/MS.Libs.Infra/MS.Libs.Infra.Utils/MS.Libs.Infra.Utils.csproj
+++ b/MS.Libs/MS.Libs.Infra/MS.Libs.Infra.Utils/MS.Libs.Infra.Utils.csproj
@@ -13,6 +13,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\MS.Libs.Core\MS.Libs.Core.Domain\MS.Libs.Core.Domain.csproj" />
   </ItemGroup>
 </Project>
