--- a/MS.Services/MS.Services.Products/MS.Services.Products.Core/MS.Services.Products.Core.Domain/MS.Services.Products.Core.Domain.csproj
+++ b/MS.Services/MS.Services.Products/MS.Services.Products.Core/MS.Services.Products.Core.Domain/MS.Services.Products.Core.Domain.csproj
@@ -13,8 +13,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="LcsEverton.MS.Libs.Core.Domain" Version="5.1.1" />
+    <PackageReference Include="LcsEverton.MS.Libs.Core.Domain" Version="10.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DbContexts\Repositorys\" />
+    <Folder Include="Plugins\" />
   </ItemGroup>
 
 </Project>
