--- a/MS.Services/MS.Services.Products/MS.Services.Products.WebAPI/appsettings.json
+++ b/MS.Services/MS.Services.Products/MS.Services.Products.WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Server=localhost,11433;Database=AuthDb;User Id=sa;Password=Numsey#2021;TrustServerCertificate=True;"
+    "SqlConnection": "Server=FIVBR-APP002V\\QA;Database=AuthDb;User Id=user_sign;Password=sign;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
