--- a/MS.Libs/MS.Libs.Core/MS.Libs.Core.Application/MS.Libs.Core.Application.csproj
+++ b/MS.Libs/MS.Libs.Core/MS.Libs.Core.Application/MS.Libs.Core.Application.csproj
@@ -10,6 +10,7 @@
     <PackageId>LcsEverton.MS.Libs.Core.Application</PackageId>
     <Version>14.0.0</Version>
     <Authors>Lucas Everton Santos de Oliveira</Authors>
+    <BaseOutputPath>C:\Users\lcsev\.nuget\packages\lcseverton.ms.libs.core.application\14.0.0\lib</BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
