--- a/MS.Libs/MS.Libs.Core/MS.Libs.Core.Domain/MS.Libs.Core.Domain.csproj
+++ b/MS.Libs/MS.Libs.Core/MS.Libs.Core.Domain/MS.Libs.Core.Domain.csproj
@@ -8,7 +8,8 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Title>MS.Libs.Core.Domain</Title>
     <PackageId>LcsEverton.MS.Libs.Core.Domain</PackageId>
-	<Version>14.0.0</Version>
+	  <Version>14.0.0</Version>
+    <BaseOutputPath>C:\Users\lcsev\.nuget\packages\lcseverton.ms.libs.core.domain\14.0.0\lib</BaseOutputPath>
     <Authors>Lucas Everton Santos de Oliveira</Authors>
   </PropertyGroup>
 
