--- a/MS.Libs/MS.Libs.Infra/MS.Libs.Infra.Plugins/MS.Libs.Infra.Plugins.csproj
+++ b/MS.Libs/MS.Libs.Infra/MS.Libs.Infra.Plugins/MS.Libs.Infra.Plugins.csproj
@@ -10,6 +10,7 @@
     <PackageId>LcsEverton.MS.Libs.Infra.Plugins</PackageId>
 	<Version>14.0.0</Version>
     <Authors>Lucas Everton Santos de Oliveira</Authors>
+    <BaseOutputPath>C:\Users\lcsev\.nuget\packages\lcseverton.ms.libs.infra.plugins\14.0.0\lib</BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
