--- a/MS.Libs/MS.Libs.Infra/MS.Libs.Infra.Utils/MS.Libs.Infra.Utils.csproj
+++ b/MS.Libs/MS.Libs.Infra/MS.Libs.Infra.Utils/MS.Libs.Infra.Utils.csproj
@@ -10,6 +10,7 @@
     <PackageId>LcsEverton.MS.Libs.Infra.Utils</PackageId>
 	<Version>14.0.0</Version>
     <Authors>Lucas Everton Santos de Oliveira</Authors>
+    <BaseOutputPath>C:\Users\lcsev\.nuget\packages\lcseverton.ms.libs.infra.utils\14.0.0\lib</BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
