--- a/MS.Libs/MS.Libs.WebApi/MS.Libs.WebApi.csproj
+++ b/MS.Libs/MS.Libs.WebApi/MS.Libs.WebApi.csproj
@@ -10,6 +10,7 @@
     <PackageId>LcsEverton.MS.Libs.WebApi</PackageId>
 	<Version>14.0.0</Version>
     <Authors>Lucas Everton Santos de Oliveira</Authors>
+    <BaseOutputPath>C:\Users\lcsev\.nuget\packages\lcseverton.ms.libs.webapi\14.0.0\lib</BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
