--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.Core/MS.Services.Auth.Core.Domain/MS.Services.Auth.Core.Domain.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.Core/MS.Services.Auth.Core.Domain/MS.Services.Auth.Core.Domain.csproj
@@ -8,17 +8,16 @@
 
   <ItemGroup>
     <Compile Remove="Contexts\**" />
+    <Compile Remove="Infrastructure\**" />
     <EmbeddedResource Remove="Contexts\**" />
+    <EmbeddedResource Remove="Infrastructure\**" />
     <None Remove="Contexts\**" />
+    <None Remove="Infrastructure\**" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="LcsEverton.MS.Libs.Core.Domain" Version="14.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Infrastructure\" />
   </ItemGroup>
 
 </Project>
