--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.WebAPI/appsettings.Development.json
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.WebAPI/appsettings.Development.json
@@ -1,11 +1,13 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Server=FIVBR-APP002V\\QA;Database=AuthDb;User Id=user_sign;Password=sign;TrustServerCertificate=True;"
+    "SqlConnection": "Server=localhost,11433;Database=AuthDb;User Id=sa;Password=Numsey#2021;TrustServerCertificate=True;",
+    "SerilogSqlConnection": "Server=localhost,11433;Database=AppLogs;User Id=sa;Password=Numsey#2021;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Serilog": "Warning"
     }
   }
 }
