--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.WebAPI/appsettings.Development.json
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.WebAPI/appsettings.Development.json
@@ -5,9 +5,9 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
       "Microsoft.AspNetCore": "Warning",
-      "Serilog": "Warning"
+      "Serilog": "Information"
     }
   }
 }
