--- a/MS.Libs/MS.Libs.Core/MS.Libs.Core.Application/MS.Libs.Core.Application.csproj
+++ b/MS.Libs/MS.Libs.Core/MS.Libs.Core.Application/MS.Libs.Core.Application.csproj
@@ -14,6 +14,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\MS.Libs.Infra\MS.Libs.Infra.Utils\MS.Libs.Infra.Utils.csproj" />
     <ProjectReference Include="..\MS.Libs.Core.Domain\MS.Libs.Core.Domain.csproj" />
   </ItemGroup>
