--- a/MS.Libs/MS.Libs.Infra/MS.Libs.Infra.Plugins/MS.Libs.Infra.Plugins.csproj
+++ b/MS.Libs/MS.Libs.Infra/MS.Libs.Infra.Plugins/MS.Libs.Infra.Plugins.csproj
@@ -16,6 +16,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="FluentValidation" Version="11.7.1" />
+    <PackageReference PrivateAssets="none" Include="Serilog.AspNetCore" Version="7.0.0" />
+    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.3.0" />
   </ItemGroup>
 
   <ItemGroup>
