--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.WebAPI/MS.Services.Auth.WebAPI.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.WebAPI/MS.Services.Auth.WebAPI.csproj
@@ -22,6 +22,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="WeatherForecast.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
