--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.WebAPI/MS.Services.Auth.WebAPI.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.WebAPI/MS.Services.Auth.WebAPI.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Infrastructure\HttpRequestInfo.cs" />
     <Compile Remove="WeatherForecast.cs" />
   </ItemGroup>
 
