param in app settings

--- a/MS.Services/MS.Services.Gateway/MS.Services.Gateway.WebAPI/appsettings.json
+++ b/MS.Services/MS.Services.Gateway/MS.Services.Gateway.WebAPI/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "GatewayUrls": {
+    "WebApiCourse": "https://localhost:7049"
+  }
 }
