--- a/MS.Services/MS.Services.Gateway/MS.Services.Gateway.WebAPI/appsettings.json
+++ b/MS.Services/MS.Services.Gateway/MS.Services.Gateway.WebAPI/appsettings.json
@@ -10,6 +10,7 @@
   },
   "AllowedHosts": "*",
   "GatewayUrls": {
-    "WebApiCourse": "https://localhost:7049"
+    "WebApiCourse": "https://localhost:7049",
+    "WebApiStudents": "https://localhost:7048"
   }
 }
