--- a/MS.Libs/MS.Libs.Core/MS.Libs.Core.Domain/MS.Libs.Core.Domain.csproj
+++ b/MS.Libs/MS.Libs.Core/MS.Libs.Core.Domain/MS.Libs.Core.Domain.csproj
@@ -9,7 +9,7 @@
     <Title>MS.Libs.Core.Domain</Title>
     <PackageId>LcsEverton.MS.Libs.Core.Domain</PackageId>
 	  <Version>15.0.0</Version>
-    <BaseOutputPath>C:\Users\lcsev\.nuget\packages\lcseverton.ms.libs.core.domain\14.0.0\lib</BaseOutputPath>
+    <BaseOutputPath>C:\Users\L9652137\.nuget\packages\lcseverton.ms.libs.core.domain\15.0.0\lib</BaseOutputPath>
     <Authors>Lucas Everton Santos de Oliveira</Authors>
   </PropertyGroup>
 
