--- a/MS.Libs/MS.Libs.WebApi/MS.Libs.WebApi.csproj
+++ b/MS.Libs/MS.Libs.WebApi/MS.Libs.WebApi.csproj
@@ -8,9 +8,9 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Title>MS.Libs.WebApi</Title>
     <PackageId>LcsEverton.MS.Libs.WebApi</PackageId>
-	<Version>16.0.0</Version>
+	<Version>17.0.0</Version>
     <Authors>Lucas Everton Santos de Oliveira</Authors>
-    <BaseOutputPath>C:\Users\L9652137\.nuget\packages\lcseverton.ms.libs.webapi\15.0.0\lib</BaseOutputPath>
+    <BaseOutputPath>C:\Users\lcsev\.nuget\packages\lcseverton.ms.libs.webapi\15.0.0\lib</BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
