--- a/MS.Services/MS.Services.Gateway/MS.Services.Gateway.WebAPI/appsettings.Development.json
+++ b/MS.Services/MS.Services.Gateway/MS.Services.Gateway.WebAPI/appsettings.Development.json
@@ -9,5 +9,9 @@
       "Microsoft.AspNetCore": "Warning",
       "Serilog": "Information"
     }
+  },
+  "GatewayUrls": {
+    "WebApiCourse": "https://localhost:7049",
+    "WebApiStudents": "https://localhost:7048"
   }
 }
