--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.WebAPI/appsettings.Development.json
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.WebAPI/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Server=FIVBR-APP002V\\QA;Database=AuthDb;User Id=user_sign;Password=sign;TrustServerCertificate=True;",
-    "SerilogSqlConnection": "Server=FIVBR-APP002V\\QA;Database=AppLogs;User Id=user_sign;Password=sign;TrustServerCertificate=True;"
+    "SqlConnection": "",
+    "SerilogSqlConnection": ""
   },
   "Logging": {
     "LogLevel": {
