atualização da api para flow swagger

--- a/MS.Services/MS.Services.Gateway/MS.Services.Gateway.WebAPI/appsettings.Development.json
+++ b/MS.Services/MS.Services.Gateway/MS.Services.Gateway.WebAPI/appsettings.Development.json
@@ -11,7 +11,7 @@
     }
   },
   "GatewayUrls": {
-    "WebApiCourse": "https://localhost:7049",
+    "WebApiCourse": "http://localhost:4001/",
     "WebApiStudents": "https://localhost:7048"
   }
 }
