atualizar o json com a reta de login

--- a/MS.Services/MS.Services.Gateway/MS.Services.Gateway.WebAPI/appsettings.Development.json
+++ b/MS.Services/MS.Services.Gateway/MS.Services.Gateway.WebAPI/appsettings.Development.json
@@ -13,5 +13,8 @@
   "GatewayUrls": {
     "WebApiCourse": "http://localhost:4001/",
     "WebApiStudents": "https://localhost:7048"
+  },
+  "Swagger": {
+    "FlowLogin": "https://localhost:7046/api/v1/auth/flowlogin"
   }
 }
