--- a/MS.Services/MS.Services.Courses/MS.Services.Courses.WebAPI/appsettings.Development.json
+++ b/MS.Services/MS.Services.Courses/MS.Services.Courses.WebAPI/appsettings.Development.json
@@ -9,5 +9,8 @@
       "Microsoft.AspNetCore": "Warning",
       "Serilog": "Information"
     }
+  },
+  "Swagger": {
+    "FlowLogin": "https://localhost:7046/api/v1/auth/flowlogin"
   }
 }
