atualizações de codigo pertinentes

--- a/MS.WebUI/control-services/angular.json
+++ b/MS.WebUI/control-services/angular.json
@@ -37,7 +37,8 @@
             ],
             "scripts": [],
             "allowedCommonJsDependencies" : [
-              "flat"
+              "flat",
+              "moment"
             ]
           },
           "configurations": {
