--- a/MS.WebUI/control-services/package.json
+++ b/MS.WebUI/control-services/package.json
@@ -17,11 +17,16 @@
     "@angular/core": "^16.2.4",
     "@angular/forms": "^16.2.4",
     "@angular/material": "^16.1.6",
+    "@angular/material-moment-adapter": "^16.2.3",
     "@angular/platform-browser": "^16.2.4",
     "@angular/platform-browser-dynamic": "^16.2.4",
     "@angular/router": "^16.2.4",
     "@ngneat/transloco": "^5.0.7",
+    "bn-ng-idle": "^2.0.5",
+    "chart.js": "^4.4.0",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.0",
+    "save": "^2.9.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
