--- a/MS.Services/MS.Services.Gateway/MS.Services.Gateway.Infra/MS.Services.Gateway.Plugins/MS.Services.Gateway.Plugins.csproj
+++ b/MS.Services/MS.Services.Gateway/MS.Services.Gateway.Infra/MS.Services.Gateway.Plugins/MS.Services.Gateway.Plugins.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
     <PackageReference PrivateAssets="none" Include="Serilog.AspNetCore" Version="7.0.0" />
     <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.3.0" />
+    <PackageReference Include="prometheus-net.AspNetCore" Version="8.0.0" />
   </ItemGroup>
 
   
