--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -116,3 +116,21 @@ services:
       - '8080:80'
     networks:
       - 'frontend'
+      
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    ports:
+      - "30090:9090"
+    environment:
+      - TZ=America/Sao_Paulo
+    volumes:
+      - ./MS.Observables/Prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - "30091:3000"
+    volumes:
+      - ./grafana-data/data:/var/lib/grafana
