--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,7 +125,7 @@ services:
     environment:
       - TZ=America/Sao_Paulo
     volumes:
-      - ./tmp/prometheus:/prometheus
+      - ./MS.Observables/Prometheus:/prometheus
       - ./MS.Observables/Prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       
   grafana:
@@ -134,4 +134,4 @@ services:
     ports:
       - "30091:3000"
     volumes:
-      - ./grafana-data/data:/var/lib/grafana
+      - ./MS.Observables/Graphana:/var/lib/grafana
